--- a/styles/style.css
+++ b/styles/style.css
@@ -6,24 +6,116 @@
 
 :root {
     --Marine-blue: hsl(213, 96%, 18%);
-    --Purplish-blue: hsl(243, 100%, 62%);
-    --Pastel-blue: hsl(228, 100%, 84%);
-    --Light-blue: hsl(206, 94%, 87%);
-    --Strawberry-red: hsl(354, 84%, 57%);
-    --Cool-gray: hsl(231, 11%, 63%);
-    --Light-gray: hsl(229, 24%, 87%);
-    --Magnolia: hsl(217, 100%, 97%);
-    --Alabaster: hsl(231, 100%, 99%);
     --White: hsl(0, 0%, 100%);
     --Black: #000;
-    --Light-red: #e73333;
-    --Red: #8f0505;
-    --Dark-green: #005a00;
-    --Green: #51e051da;
+}
+
+.flex {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
 
 body {
     background-color: var(--Marine-blue);
     color: var(--White);
     font-family: Roboto;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+}
+
+#calculator {
+    background-color: var(--Black);
+    padding: 0.5rem;
+    border-radius: 0.4rem;
+    color: var(--Marine-blue);
+}
+
+.output-container {
+    width: 100%;
+}
+
+.output-container > * {
+    height: 4rem;
+    border: none;
+    background-color: var(--White);
+}
+
+#output-box {
+    border-radius: 8px 0 0 8px;
+    padding: 8px;
+    font-size: 1.2rem;
+    text-align: right;
+}
+
+#delete-btn {
+    padding: 8px;
+    border-radius: 0 8px 8px 0;
+    font-size: 2rem;
+}
+
+button:hover {
+    opacity: 0.9;
+    cursor: pointer;
+}
+
+.input-button-container {
+    margin-top: 0.5rem;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 4px;
+}
+
+.input-button {
+    width: 100%;
+    height: 4rem;
+    font-size: 1.2rem;
+    border: none;
+    border-radius: 5px;
+    font-weight: 700;
+}
+
+@media only screen and (max-width: 300px) {
+
+    .input-button {
+        font-size: 1rem;
+    }
+
+    #delete-btn {
+        font-size: 1.5rem;
+    }
+
+    #output-box {
+        font-size: 1rem;
+    }
+
+    .output-container > *, .input-button {
+        height: 2.5rem;
+    }
+}
+
+@media only screen and (max-width: 250px) {
+
+    #calculator {
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #output-box {
+        max-width: 100px;
+    }
+
+    .input-button-container {
+        grid-template-columns: repeat(4, 1.5rem);
+    }
+
+    .output-container > *, .input-button {
+        font-size: 0.8rem;
+        height: 1.5rem;
+    }
 }
