--- a/styles/style.css
+++ b/styles/style.css
@@ -64,7 +64,7 @@ body {
 }
 
 #output-box {
-    border-radius: 8px 0 0 8px;
+    border-radius: 8px 0 0 0;
     padding: 8px;
     font-size: 1.2rem;
     text-align: right;
@@ -72,8 +72,18 @@ body {
 
 #delete-btn {
     padding: 8px;
-    border-radius: 0 8px 8px 0;
+    border-radius: 0 8px 0 0;
     font-size: 2rem;
+}
+
+#result-preview {
+    height: 2rem;
+    width: 100%;
+    background-color: var(--White);
+    border-radius: 0 0 8px 8px;
+    padding: 0 10px;
+    text-align: right;
+    color: var(--Marine-blue);
 }
 
 button:hover {
